# agent-columbo

./: .gitignore  README.md  pyproject.toml
examples/: config.yaml  main.py
src/columbo/: detective.py  models.py
